<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCResultActivity"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:background="@color/bg_app">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResult"
            android:text="@string/result"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints"/>




    <androidx.cardview.widget.CardView
        android:id="@+id/viewResult"
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:cardBackgroundColor="@color/bg_comp_sel"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/recalcButton"
            app:layout_constraintTop_toBottomOf="@+id/tvResult"
            >

            <TextView
                android:id="@+id/tvShortDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obesity"
                android:layout_marginBottom="25dp"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IMC"
                android:textColor="@color/white"
                android:textSize="78sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAlignment="center"
                android:text="@string/obesityDesc"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recalcButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/bg_button"
        android:text="Re-Calcular"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:circularflow_radiusInDP="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewResult"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>