<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCCalculatorActivity"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:background="@color/bg_app">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/bg_comp_sel"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewFemale"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_male"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_female" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:textColor="@color/title_text"/>
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/viewMale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <LinearLayout
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                />
            
            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120cm"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="true"
                />

            <com.google.android.material.slider.RangeSlider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rsHeight"
                android:contentDescription="height"
                android:stepSize = "1"
                android:valueFrom = "120"
                android:valueTo = "200"
                >

            </com.google.android.material.slider.RangeSlider>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewPeso"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@id/viewEdad"
        app:layout_constraintEnd_toStartOf="@id/viewEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewHeight"
        tools:ignore="NotSibling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="17sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">



                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractWeightRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_remove"
                    android:tint="@color/white"
                    android:contentDescription="TODO">
                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractWeightAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white">
                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewEdad"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_marginTop="184dp"
        app:cardBackgroundColor="@color/bg_comp"

        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewPeso"
        app:layout_constraintTop_toTopOf="@id/viewHeight">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAgeRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/purple_500"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_remove"
                    android:tint="@color/white"></com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAgeAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white">
                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calcButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_500"
        android:text="@string/calc"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >


    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>